@@ -281,4 +281,13 @@ public class PathTrie {
         }
         return sb.toString();
     }
+
+    /**
+     * clear all nodes
+     */
+    public void clear() {
+        for(String child : rootNode.getChildren()) {
+            rootNode.deleteChild(child);
+        }
+    }
 }
