@@ -1187,6 +1187,7 @@ public class DataTree {
     public void deserialize(InputArchive ia, String tag) throws IOException {
         deserializeList(longKeyMap, ia);
         nodes.clear();
+        pTrie.clear();
         String path = ia.readString("path");
         while (!path.equals("/")) {
             DataNode node = new DataNode();
