@@ -4,6 +4,8 @@ Backward compatible changes:
 
 BUGFIXES:
 
+  ZOOKEEPER-1448: Node+Quota creation in transaction log can crash leader startup (Botond Hejj via fpj)
+
   ZOOKEEPER-2347: Deadlock shutting down zookeeper
   (Rakesh R via rgs)
 
